--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "npx eslint"
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,13 @@
   "homepage": "https://github.com/SergeiShabanov1989/express-mesto-gha#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.30.0",
     "nodemon": "^2.0.16"
   }
