--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,6 @@
-module.exports = {
+{
   "env": {
-      "browser": true,
-      "es2021": true,
+      "es6": true,
       "node": true
   },
   "extends": [
@@ -18,10 +17,10 @@ module.exports = {
       "react"
   ],
   "rules": {
-    "eslint linebreak-style": ["error", "windows"],
-    "linebreak-style": 0,
-    "eslint no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "eslint linebreak-style": 0,
+    "no-underscore-dangle": "off",
     "eol-last": 0,
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
+    "quotes": "off"
   }
 }
