--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
       "node": true
   },
   "extends": [
-      "airbnb-base/legacy"
+      "airbnb-base"
   ],
   "parserOptions": {
       "ecmaFeatures": {
@@ -18,7 +18,7 @@
   ],
   "rules": {
     "eslint linebreak-style": 0,
-    "no-underscore-dangle": "off",
+    "no-underscore-dangle": ["error",{"allow":["_id"]}],
     "eol-last": 0,
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
     "quotes": "off"
