--- a/.eslintrc
+++ b/.eslintrc
@@ -18,9 +18,6 @@
   ],
   "rules": {
     "eslint linebreak-style": 0,
-    "no-underscore-dangle": ["error",{"allow":["_id"]}],
-    "eol-last": 0,
-    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
-    "quotes": "off"
+    "no-underscore-dangle": ["error",{"allow":["_id"]}]
   }
 }
